--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<script src="js/tracery/mods-eng-basic.js"></script>
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/bqi4yin.css">
 </head>
 <body>
     
