--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <section>
         <h2 id="title"></h2>
         <p id="abstract"></p>
+        <button onclick="generatePaper()">Generate New Paper</button>
     </section>
 
     <div class="spacer bottom"></div>
