write a new blurb

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     
     <header>
         <h1>Thinking About Media</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, distinctio quidem atque voluptatem, voluptatum nostrum repellat nisi, placeat consectetur excepturi inventore necessitatibus labore sunt itaque officiis totam ut dolor doloremque quibusdam fugiat animi saepe eaque. Sit debitis ipsa unde eveniet consectetur in, facilis similique itaque iure nam rerum. Ex ea fuga ipsa ullam soluta aut praesentium porro, sit eveniet numquam provident et maiores doloribus repellendus consequuntur adipisci nihil? Aspernatur cum praesentium non voluptates dolores, id voluptatum ducimus expedita officiis esse at reprehenderit dolor, sed eos nesciunt, illum vero fuga magnam. Corrupti obcaecati, id provident culpa maxime eos sint nihil explicabo?</p>
+        <p>Doing media studies scholarship doesn't have to be difficult!</p>
+        <p>Struggling to come up with a topic to write about? Looming deadlines and just nothing coming to mind? <br />Use this generator to automatically generate a title and abstract for your next paper, conference proposal, or other presentation!</p>
+        <p>I mean, if we're studying and critiquing media and technology, why not put some of those same technologies to use and get it to do our work for us?</p>
     </header>
 
     <div class="spacer top"></div>
